--- a/src/administration/client/templates/client/order_list.html
+++ b/src/administration/client/templates/client/order_list.html
@@ -77,7 +77,7 @@
                                             </tbody>
                                         </table>
                                         {% else %}
-                                        <h3 class="mt-4 text-danger">WishList Empty</h3>
+                                        <h3 class="mt-4 text-danger">Orders Not Found</h3>
                                         {% endif %}
                                     </div>
                                 </div>
