--- a/src/website/templates/website/cart.html
+++ b/src/website/templates/website/cart.html
@@ -98,7 +98,7 @@
             </div>
         </div>
         <div class="row cart-buttons">
-            <div class="col-6"><a class="btn btn-outline-danger" href="#"><i class="ti-arrow-left"></i>&nbsp; continue
+            <div class="col-6"><a class="btn btn-outline-danger" href="{% url 'website:shop' %}"><i class="ti-arrow-left"></i>&nbsp; continue
                 shopping</a></div>
             <div class="col-6"><a class="btn btn-danger" href="{% url 'website:order' %}">check out</a></div>
         </div>
@@ -108,7 +108,7 @@
 <h3 class="text-center mt-4 text-danger">Cart is Empty</h3>
 <div class="row justify-content-center mt-4 mb-4 ">
             <div class="col-12 text-center">
-                <a class="btn btn-outline-danger" href="{% url 'website:home' %}"><i class="ti-arrow-left"></i>&nbsp; continue
+                <a class="btn btn-outline-danger" href="{% url 'website:shop' %}"><i class="ti-arrow-left"></i>&nbsp; continue
                 shopping</a>
             </div>
         </div>
