--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -33,36 +33,13 @@
 <section class="pb-0  banner-text-white ratio_45">
     <div class="container">
         <div class="row partition2">
-            <div class="col-md-6">
+            <div class="col-md-12">
                 <a href="#">
                     <div class="collection-banner p-left text-start">
-                        <div class="img-part">
+                        <div class="img">
                             <img alt=""
-                                 class="img-fluid bg-img blur-up lazyload"
-                                 src="{% static 'website/images/game/banner/1.jpg' %}">
-                        </div>
-                        <div class="contain-banner">
-                            <div>
-                                <h4>for windows</h4>
-                                <h2>save 10%</h2>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-md-6">
-                <a href="#">
-                    <div class="collection-banner p-right text-end">
-                        <div class="img-part">
-                            <img alt=""
-                                 class="img-fluid bg-img blur-up lazyload"
-                                 src="{% static 'website/images/game/banner/2.jpg' %}">
-                        </div>
-                        <div class="contain-banner">
-                            <div>
-                                <h4>for psp</h4>
-                                <h2>off 15%</h2>
-                            </div>
+                                 class=" blur-up lazyload"
+                                 src="{% static 'website/images/bgg.jpg' %}">
                         </div>
                     </div>
                 </a>
@@ -73,166 +50,67 @@
 <!-- category section end -->
 
 
-<!-- Product tab slider -->
+<!-- Paragraph-->
 <div class="title1  section-t-space">
-    <h4>special offer</h4>
-    <h2 class="title-inner1">top collection</h2>
+    <h2 class="title-inner1">New Collection</h2>
 </div>
-<section class="game-product ratio_asos pt-0">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6 offset-lg-3">
-                <div class="product-para">
-                    <p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting
-                        industry. Lorem Ipsum has been the industry's
-                        standard dummy text ever since the 1500s,</p>
-                </div>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-6 offset-lg-3">
+            <div class="product-para">
+                <p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's
+                    standard dummy text ever since the 1500s,</p>
             </div>
         </div>
+    </div>
+</div>
+<!-- Paragraph end -->
+
+
+<!-- Product slider -->
+<section class="game-product pt-0 ratio_asos">
+    <div class="container">
         <div class="row">
             <div class="col">
-                <div class="theme-tab">
-                    <ul class="tabs tab-title">
-                        <li class="current">
-                            <a href="tab-4">New Products</a>
-                        </li>
-                        <li class="">
-                            <a href="tab-5">Most Like</a>
-                        </li>
-                        <li class="">
-                            <a href="tab-6">Best Sellers</a>
-                        </li>
-                    </ul>
-                    <div class="tab-content-cls">
-                        <div class="tab-content active default" id="tab-4">
-                            <div class=" no-slider five-product row">
-                                {% for sale in new_products %}
-                                <div class="product-box">
-                                    <div class="img-wrapper">
-                                        <div class="front">
-                                            <a href="#"><img
-                                                    alt=""
-                                                    class="img-fluid bg-img blur-up lazyload"
-                                                    src="{{sale.thumbnail_image.url}}"></a>
-                                        </div>
-                                        <div class="cart-info cart-wrap">
-                                            <a href="javascript:void(0)" title="Add to Wishlist"><i aria-hidden="true"
-                                                                                                    class="ti-heart"></i></a>
+                <div class="product-slider-5 product-m no-arrow">
+                    {% for top in new_products %}
+                    <div class="product-box">
+                        <div class="img-wrapper">
+                            <div class="front">
+                                <a href="{% url 'website:product-detail' top.slug %}"><img
+                                        alt=""
+                                        class="img-fluid bg-img blur-up lazyload"
+                                        src="{{top.thumbnail_image.url}}"></a>
+                            </div>
+                            <div class="cart-info cart-wrap">
+                                <a href="javascript:void(0)" title="Add to Wishlist"><i aria-hidden="true"
+                                                                                        class="ti-heart"></i></a>
 
-                                        </div>
-                                        <div class="add-button" data-bs-target="#addtocart" data-bs-toggle="modal">
-                                            <a href="{% url 'website:product-detail' sale.slug %}"> View</a>
-                                        </div>
-                                    </div>
-                                    <div class="product-detail">
+                            </div>
+                            <div class="add-button" data-bs-target="#addtocart" data-bs-toggle="modal"><a
+                                    href="{% url 'website:product-detail' top.slug %}"> View</a>
 
-                                        <a href="#">
-                                            <h6>{{sale.name}}</h6>
-                                        </a>
-                                        <div class="">
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-
-                                        </div>
-                                        <h6>{% for price in sale.product_version.all %}
-                                            ${{price.price}}
-                                            &nbsp;&nbsp;&nbsp;
-                                            {% endfor %}</h6>
-                                    </div>
-                                </div>
-                                {% endfor %}
                             </div>
                         </div>
-                        <div class="tab-content" id="tab-5">
-                            <div class=" no-slider five-product row">
-                                {% for sale in most_like %}
-                                <div class="product-box">
-                                    <div class="img-wrapper">
-                                        <div class="front">
-                                            <a href="#"><img
-                                                    alt=""
-                                                    class="img-fluid bg-img blur-up lazyload"
-                                                    src="{{sale.thumbnail_image.url}}"></a>
-                                        </div>
-                                        <div class="cart-info cart-wrap">
-                                            <a href="javascript:void(0)" title="Add to Wishlist"><i aria-hidden="true"
-                                                                                                    class="ti-heart"></i></a>
-
-                                        </div>
-                                        <div class="add-button" data-bs-target="#addtocart" data-bs-toggle="modal">
-                                            <a href="{% url 'website:product-detail' sale.slug %}"> View</a>
-
-                                        </div>
-                                    </div>
-                                    <div class="product-detail">
-
-                                        <a href="#">
-                                            <h6>{{sale.name}}</h6>
-                                        </a>
-                                        <div class="">
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-
-                                        </div>
-                                        <h6>{% for price in sale.product_version.all %}
+                        <div class="product-detail">
+                            <div class="rating">
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                                <i class="fa fa-star"></i>
+                            </div>
+                            <a href="#">
+                                <h6>{{top.name}}</h6>
+                            </a>
+                            <h6>{% for price in top.product_version.all %}
                                             ${{price.price}}
                                             &nbsp;&nbsp;&nbsp;
                                             {% endfor %}</h6>
-                                    </div>
-                                </div>
-                                {% endfor %}
-                            </div>
-                        </div>
-                        <div class="tab-content" id="tab-6">
-                            <div class=" no-slider five-product row">
-                                {% for sale in most_sale %}
-                                <div class="product-box">
-                                    <div class="img-wrapper">
-                                        <div class="front">
-                                            <a href="#"><img
-                                                    alt=""
-                                                    class="img-fluid bg-img blur-up lazyload"
-                                                    src="{{sale.thumbnail_image.url}}"></a>
-                                        </div>
-                                        <div class="cart-info cart-wrap">
-                                            <a href="javascript:void(0)" title="Add to Wishlist"><i aria-hidden="true"
-                                                                                                    class="ti-heart"></i></a>
-                                        </div>
-                                        <div class="add-button" data-bs-target="#addtocart" data-bs-toggle="modal">
-                                            <a href="{% url 'website:product-detail' sale.slug %}"> View</a>
-
-                                        </div>
-                                    </div>
-                                    <div class="product-detail">
-
-                                        <a href="#">
-                                            <h6>{{sale.name}}</h6>
-                                        </a>
-                                        <div class="">
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-
-                                        </div>
-                                        <h6>{% for price in sale.product_version.all %}
-                                            ${{price.price}}
-                                            &nbsp;&nbsp;&nbsp;
-                                            {% endfor %}</h6>
-                                    </div>
-                                </div>
-                                {% endfor %}
-
-                            </div>
                         </div>
                     </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
