Launguage convertor added

--- a/src/administration/admins/templates/admins/include/header.html
+++ b/src/administration/admins/templates/admins/include/header.html
@@ -85,7 +85,9 @@
                     <a href="{% url 'accounts:logout' %}" class="dropdown-item">Logout</a>
                 </div>
             </div>
+
         </div>
+
         <div class="collapse navbar-collapse" id="navbar-menu">
             <div class="d-flex flex-column flex-md-row flex-fill align-items-stretch align-items-md-center">
                 <ul class="navbar-nav">
@@ -96,4 +98,6 @@
             </div>
         </div>
     </div>
+                <div id="google_translate_element"></div>
+
 </header>
