--- a/templates/website/include/header.html
+++ b/templates/website/include/header.html
@@ -21,8 +21,11 @@
                         <li><a href="#"><i aria-hidden="true" class="text-danger fa fa-instagram"></i></a></li>&nbsp;&nbsp;
                     </ul>
                 </div>
+                <div class="col-lg-2 my-3">
+                                                                <div id="google_translate_element"></div>
 
-                <div class="col-lg-6 text-end">
+                </div>
+                <div class="col-lg-4 text-end">
                     <ul class="header-dropdown">
                         <li class="mobile-wishlist"><a href="#"><i aria-hidden="true" class="fa fa-heart"></i></a>
                         </li>
@@ -128,27 +131,6 @@
                                         </div>
                                     </li>
 
-                                    {# SETTINGS LANG #}
-                                    <li class="onhover-div mobile-setting">
-                                        <div><img alt=""
-                                                  class="img-fluid blur-up lazyload"
-                                                  src="{% static 'website/images/icon/setting.png' %}"> <i
-                                                class="ti-settings"></i></div>
-                                        <div class="show-div setting">
-                                            <h6>language</h6>
-                                            <ul>
-                                                <li><a href="#">english</a></li>
-                                                <li><a href="#">french</a></li>
-                                            </ul>
-                                            <h6>currency</h6>
-                                            <ul class="list-inline">
-                                                <li><a href="#">euro</a></li>
-                                                <li><a href="#">rupees</a></li>
-                                                <li><a href="#">pound</a></li>
-                                                <li><a href="#">dollar</a></li>
-                                            </ul>
-                                        </div>
-                                    </li>
 
                                     {# CART #}
                                     <li class="onhover-div mobile-cart">
