--- a/src/administration/admins/templates/admins/base.html
+++ b/src/administration/admins/templates/admins/base.html
@@ -96,6 +96,13 @@
     {% endblock base_internal_scripts %}
     </body>
 {% endblock %}
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </html>
 
 {# EXTERNAL SCRIPTS #}
