--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -255,8 +255,14 @@
     function closeSearch() {
         document.getElementById("search-overlay").style.display = "none";
     }
+
+</script>
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.HORIZONTAL}, 'google_translate_element');
+}
 </script>
 
-</body>
-
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+</body>/
 </html>
