product detail and model added

--- a/src/administration/client/templates/client/books.html
+++ b/src/administration/client/templates/client/books.html
@@ -60,7 +60,7 @@
                                                 </td>
                                                 <td>
                                                     <a href="{% url  'client:download_file' object.product.id %}"><i class="fa fa-download"></i></a>
-                                                    <a href="{% url 'client:read_book' object.product.id %}"><i class="fa fa-eye mx-1"></i></a>
+<!--                                                    <a href="{% url 'client:read_book' object.product.id %}"><i class="fa fa-eye mx-1"></i></a>-->
                                                 </td>
 
 
