--- a/src/administration/client/templates/client/sample_book.html
+++ b/src/administration/client/templates/client/sample_book.html
@@ -11,7 +11,7 @@
     <meta content="width=device-width,initial-scale=1" name="viewport">
 
     <!-- title -->
-    <title>Diamond FlipBook in jQuery ( full area )</title>
+    <title>Monogatari Sample Book Reading</title>
 
     <!-- add css and js for flipbook -->
     <link href="{% static 'flip_book/css/style.css' %}" rel="stylesheet" type="text/css">
