--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -9,23 +9,103 @@
 
 
 
+
+</style>
+<style>
+* {box-sizing: border-box;}
+body {font-family: Verdana, sans-serif;}
+.mySlides {display: none;}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
+}
+
 </style>
 
-<!-- Home slider -->
-<section class="p-0 effect-cls ">
-    <div class="slide-1 home-slider">
-        <div>
-            <div class="home text-center p-center">
-                <img alt="" class="bg-img blur-up lazyload" src="{% static 'website/bg/slider2.jpg' %}">
-            </div>
-        </div>
-        <div>
-            <div class="home text-center p-center">
-                <img alt="" class="bg-img blur-up lazyload" src="{% static 'website/bg/slider1.jpg' %}">
-            </div>
-        </div>
+
+<div class=" effect-cls">
+    {% if slider %}
+    {% for slider in slider %}
+    <div class="mySlides fade">
+        <div class="numbertext"></div>
+        <img src="{{slider.image.url}}" style="height:550px;width:100%">
+        <div class="text"></div>
     </div>
-</section>
+    {% endfor %}
+    {% else %}
+    <div class="mySlides fade">
+        <div class="numbertext"></div>
+        <img src="{% static 'website/bg/slider2.jpg' %}" style="height:550px;width:100%">
+        <div class="text"></div>
+    </div>
+    {% endif %}
+
+</div>
+<br>
+
+<div style="text-align:center">
+    {% for slider in slider %}
+    <span class="dot"></span>
+    {% endfor %}
+</div>
+
+
+<!-- Home slider -->
 <!-- Home slider end -->
 
 
@@ -37,9 +117,14 @@
                 <a href="#">
                     <div class="collection-banner p-left text-start">
                         <div class="img">
+                            {% if banner %}
+                            <img src="{{banner.image.url}}" style="height:350px;width:100%">
+
+                            {% else %}
                             <img alt=""
                                  class=" blur-up lazyload"
                                  src="{% static 'website/images/bgg.jpg' %}">
+                            {% endif %}
                         </div>
                     </div>
                 </a>
@@ -105,9 +190,9 @@
                                 <h6>{{top.name}}</h6>
                             </a>
                             <h6>{% for price in top.product_version.all %}
-                                            ${{price.price}}
-                                            &nbsp;&nbsp;&nbsp;
-                                            {% endfor %}</h6>
+                                ${{price.price}}
+                                &nbsp;&nbsp;&nbsp;
+                                {% endfor %}</h6>
                         </div>
                     </div>
                     {% endfor %}
@@ -147,7 +232,10 @@
                     <div class="product-box">
                         <div class="img-wrapper">
                             <div class="front">
-                                                                <a href="{% url 'website:post-detail' top.slug %}" class="bg-size blur-up lazyloaded" style="background-image: url({{top.thumbnail_image.url}}); background-size: cover; background-position: center center; display: block;"><img src="{{top.thumbnail_image.url}}" class="img-fluid blur-up bg-img lazyloaded" alt="" style="display: none;"></a>
+                                <a class="bg-size blur-up lazyloaded" href="{% url 'website:post-detail' top.slug %}"
+                                   style="background-image: url({{top.thumbnail_image.url}}); background-size: cover; background-position: center center; display: block;"><img
+                                        alt="" class="img-fluid blur-up bg-img lazyloaded"
+                                        src="{{top.thumbnail_image.url}}" style="display: none;"></a>
 
                             </div>
                         </div>
@@ -165,9 +253,6 @@
     </div>
 </section>
 <!-- Product slider end -->
-
-
-
 
 
 <!-- Parallax section start -->
@@ -246,9 +331,9 @@
                                 <h6>{{top.name}}</h6>
                             </a>
                             <h6>{% for price in top.product_version.all %}
-                                            ${{price.price}}
-                                            &nbsp;&nbsp;&nbsp;
-                                            {% endfor %}</h6>
+                                ${{price.price}}
+                                &nbsp;&nbsp;&nbsp;
+                                {% endfor %}</h6>
                         </div>
                     </div>
                     {% endfor %}
@@ -329,4 +414,26 @@
 </section>
 <!--  logo section end-->
 
+<script>
+let slideIndex = 0;
+showSlides();
+
+function showSlides() {
+  let i;
+  let slides = document.getElementsByClassName("mySlides");
+  let dots = document.getElementsByClassName("dot");
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";
+  }
+  slideIndex++;
+  if (slideIndex > slides.length) {slideIndex = 1}
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";
+  dots[slideIndex-1].className += " active";
+  setTimeout(showSlides, 2000); // Change image every 2 seconds
+}
+
+</script>
 {% endblock %}
