--- a/src/website/templates/website/product_detail.html
+++ b/src/website/templates/website/product_detail.html
@@ -58,15 +58,15 @@
                 <div class="col-lg-7 rtl-text">
                     <div class="product-right">
                         <h2>{{object.name}}</h2>
-                        <div class="row">
+                        <div class="row" id = 'version_detail' style="display:none">
                             {% for version in object.get_versions %}
 
-                            <div class="col-sm-6">
+                            <div  class="col-sm-6">
                                 <h4 class="price-detail">{{version.version.name}} Version </h4>
                                 <hr>
                                 <h4 class="price-detail"> Price : ${{version.price}}</h4>
-                                <h4 class="price-detail"> ISBN : ${{version.isbn}}</h4>
-                                <hR>
+                                <h4 class="price-detail"> ISBN : ${{version.isbn}}</h4><br><br>
+
 
                             </div>
                             {% endfor %}
@@ -279,12 +279,16 @@
 <script>
 function enableButton() {
   var selectelem = document.getElementById('dropdown');
+  var versionDetail = document.getElementById('version_detail');
   var btnelem = document.getElementById('seedoc');
   if (selectelem.value === "default") {
     btnelem.disabled = true;
-  } else {
+
+  versionDetail.style.display = 'none';
+    } else {
     btnelem.disabled = false;
-  }
+  versionDetail.style.display = 'block';
+    }
 }
 
 
