changes made from file

--- a/src/administration/admins/templates/admins/category_list.html
+++ b/src/administration/admins/templates/admins/category_list.html
@@ -1,13 +1,13 @@
 {% extends 'admins/base.html' %}
 {% load static %}
 
-{% block base_subtitle %} Categories{% endblock %}
-{% block base_subhead_heading %} Categories &rAarr; List{% endblock %}
-{% block base_subhead_paragraph %}List of all available Categories{% endblock %}
+{% block base_subtitle %} Genres{% endblock %}
+{% block base_subhead_heading %} Genres &rAarr; List{% endblock %}
+{% block base_subhead_paragraph %}List of all available Genres{% endblock %}
 
 {% block base_subhead_button %}
     <a class="btn btn-primary" href="{% url 'admins:category-add' %}">
-        Add Category
+        Add Genres
     </a>
 {% endblock %}
 
