--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -143,9 +143,6 @@ img {vertical-align: middle;}
     <div class="row">
         <div class="col-lg-6 offset-lg-3">
             <div class="product-para">
-                <p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s,</p>
             </div>
         </div>
     </div>
@@ -212,9 +209,6 @@ img {vertical-align: middle;}
     <div class="row">
         <div class="col-lg-6 offset-lg-3">
             <div class="product-para">
-                <p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s,</p>
             </div>
         </div>
     </div>
@@ -264,7 +258,7 @@ img {vertical-align: middle;}
                 <div class="col">
                     <div class="banner-contain">
                         <h2>2023</h2>
-                        <h3>Novels and Comics</h3>
+                        <h3>Light Novel and Manga Releases</h3>
                         <h4>special offer</h4>
                     </div>
                 </div>
@@ -278,15 +272,12 @@ img {vertical-align: middle;}
 <!-- Paragraph-->
 <div class="title1  section-t-space">
     <h4>special offer</h4>
-    <h2 class="title-inner1">top collection</h2>
+    <h2 class="title-inner1">Top Selling Series</h2>
 </div>
 <div class="container">
     <div class="row">
         <div class="col-lg-6 offset-lg-3">
             <div class="product-para">
-                <p class="text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s,</p>
             </div>
         </div>
     </div>
@@ -344,7 +335,9 @@ img {vertical-align: middle;}
 </section>
 <!-- Product slider end -->
 
-
+<div class="title1  section-t-space">
+    <h2 class="title-inner1">Digital Platforms</h2>
+</div>
 <!--  logo section -->
 <section class="section-b-space">
     <div class="container">
@@ -354,59 +347,39 @@ img {vertical-align: middle;}
                     <div>
                         <div class="logo-block">
                             <a href="#">
-                                <img alt="" src="{% static 'website/images/logos/1.png' %}">
+                                <img alt="" height="100px" src="{% static 'website/images/home/Amazon-Kindle-logo.png' %}">
                             </a>
                         </div>
                     </div>
                     <div>
                         <div class="logo-block">
                             <a href="#">
-                                <img alt="" src="{% static 'website/images/logos/2.png' %}">
+                                <img alt="" height="90px" src="{% static 'website/images/home/Apple Books.jpg' %}">
                             </a>
                         </div>
                     </div>
                     <div>
                         <div class="logo-block">
                             <a href="#">
-                                <img alt="" src="{% static 'website/images/logos/3.png' %}">
+                                <img alt="" height="90px" src="{% static 'website/images/home/bookwalker.png' %}">
                             </a>
                         </div>
                     </div>
                     <div>
-                        <div class="logo-block">
+                        <div class="logo-block mx-5">
                             <a href="#">
-                                <img alt="" src="{% static 'website/images/logos/4.png' %}">
+                                <img alt="" height="75px" src="{% static 'website/images/home/Google-Play-Books-logo.png' %}">
                             </a>
                         </div>
                     </div>
                     <div>
-                        <div class="logo-block">
+                        <div class="logo-block mx-5">
                             <a href="#">
-                                <img alt="" src="{% static 'website/images/logos/5.png' %}">
+                                <img alt="" height="80px"  src="{% static 'website/images/home/Kobo-logo.jpg' %}">
                             </a>
                         </div>
                     </div>
-                    <div>
-                        <div class="logo-block">
-                            <a href="#">
-                                <img alt="" src="{% static 'website/images/logos/6.png' %}">
-                            </a>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="logo-block">
-                            <a href="#">
-                                <img alt="" src="{% static 'website/images/logos/7.png' %}">
-                            </a>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="logo-block">
-                            <a href="#">
-                                <img alt="" src="{% static 'website/images/logos/8.png' %}">
-                            </a>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </div>
