--- a/src/administration/admins/templates/admins/category_confirm_delete.html
+++ b/src/administration/admins/templates/admins/category_confirm_delete.html
@@ -2,11 +2,11 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-{% block base_subtitle %}Category Delete{% endblock %}
-{% block base_subhead_heading %}Category &rAarr; Delete {% endblock %}
-{% block base_subhead_paragraph %}Delete Category permanently{% endblock %}
+{% block base_subtitle %}Genres Delete{% endblock %}
+{% block base_subhead_heading %}Genres &rAarr; Delete {% endblock %}
+{% block base_subhead_paragraph %}Delete Genres permanently{% endblock %}
 {% block base_subhead_button %}
-    <a href="{% url 'admins:category-list' %}">&larr; Categories</a>
+    <a href="{% url 'admins:category-list' %}">&larr; Genres</a>
 {% endblock %}
 
 {% block base_content %}
