--- a/src/administration/admins/templates/admins/category_form.html
+++ b/src/administration/admins/templates/admins/category_form.html
@@ -2,11 +2,11 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-{% block base_subtitle %}Category Form{% endblock %}
-{% block base_subhead_heading %}Category &rAarr; Form {% endblock %}
+{% block base_subtitle %}Genres Form{% endblock %}
+{% block base_subhead_heading %}Genres &rAarr; Form {% endblock %}
 {% block base_subhead_paragraph %}{% endblock %}
 {% block base_subhead_button %}
-    <a href="{% url 'admins:category-list' %}">&larr; Categories</a>
+    <a href="{% url 'admins:category-list' %}">&larr; Genres</a>
 {% endblock %}
 
 {% block base_content %}
