Order Cancel Query Issue Resolved

--- a/templates/website/base.html
+++ b/templates/website/base.html
@@ -231,6 +231,7 @@
 <script src="{% static 'website/js/fly-cart.js' %}"></script>
 
 <!-- Timer js-->
+<script src="{% static 'website/js/timer.js' %}"></script>
 <!-- Theme js-->
 <script src="{% static 'website/js/theme-setting.js' %}"></script>
 <script src="{% static 'website/js/script.js' %}"></script>
