--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -137,7 +137,7 @@ img {vertical-align: middle;}
 
 <!-- Paragraph-->
 <div class="title1  section-t-space">
-    <h2 class="title-inner1">New Collection</h2>
+    <h2 class="title-inner1">Now Available</h2>
 </div>
 <div class="container">
     <div class="row">
@@ -252,14 +252,14 @@ img {vertical-align: middle;}
 <!-- Parallax section start -->
 <section class="p-0 game-parallax effect-cls ">
     <div class="full-banner parallax text-center p-center text-center">
-        <img alt="" class="bg-img blur-up lazyload" src="{% static 'website/bg/middle.jpg' %}">
+        <img alt="" class="bg-img blur-up lazyload" src="{% static 'website/bg/image1.png' %}">
         <div class="container">
             <div class="row">
                 <div class="col">
                     <div class="banner-contain">
                         <h2>2023</h2>
                         <h3>Light Novel and Manga Releases</h3>
-                        <h4>special offer</h4>
+                        <h4>releases</h4>
                     </div>
                 </div>
             </div>
@@ -271,7 +271,7 @@ img {vertical-align: middle;}
 
 <!-- Paragraph-->
 <div class="title1  section-t-space">
-    <h4>special offer</h4>
+    <h4>releases</h4>
     <h2 class="title-inner1">Top Selling Series</h2>
 </div>
 <div class="container">
