--- a/src/website/templates/website/product_detail.html
+++ b/src/website/templates/website/product_detail.html
@@ -193,7 +193,7 @@
                             <table>
                                 <tbody>
                                 <tr>
-                                    <td>Category</td>
+                                    <td>Genres</td>
                                     {% for category in object.categories.all %}
                                     <td class="text-white">{{category.name}}</td>
                                     {% endfor %}
