--- a/src/website/templates/website/order.html
+++ b/src/website/templates/website/order.html
@@ -37,7 +37,23 @@
                                         <li>Total <span class="count">${{total_amount}}</span></li>
                                     </ul>
                                 </div>
+                                            <small class="text-secondary">Normal Delivery = 5.99$ &nbsp;&nbsp;and  &nbsp;&nbsp;Premium Delivery = 9.99$ </small>
+
                                 <div class="payment-box">
+                                    <div class="upper-box">
+                                        <div class="payment-options">
+                                            <select class="form-select mb-4 mt-3" id="dropdown1" name="shipping"
+                                                    onchange="enableButton()">
+                                                <option selected value="default">Choose a Shipping Method</option>
+                                                <option value="normal">Normal</option>
+                                                <option value="premium">Premium</option>
+
+                                            </select>
+                                        </div>
+
+                                    </div>
+
+                                </div>                             <div class="payment-box">
                                     <div class="upper-box">
                                         <div class="payment-options">
                                             <select class="form-select mb-4 mt-3" id="dropdown" name="payment"
@@ -48,9 +64,9 @@
                                             </select>
                                             <img alt="" src="{% static 'website/images/paypal.png' %}">
                                         </div>
-
                                     </div>
                                 </div>
+
                                 <div class="text-end">
     <button class="btn btn-solid hover-solid btn-animation" disabled id="seedoc"
                                         type="submit">
@@ -66,16 +82,17 @@
     </div>
 </section>
 <script>
-    function enableButton() {
-var selectelem = document.getElementById('dropdown');
-var btnelem = document.getElementById('seedoc');
-if (selectelem.value === "default") {
-btnelem.disabled = true;
-} else {
-btnelem.disabled = false;
-}
-}
+function enableButton() {
+  var selectelem = document.getElementById('dropdown');
+  var selectelem1 = document.getElementById('dropdown1');
+  var btnelem = document.getElementById('seedoc');
 
+  if (selectelem.value !== "default" && selectelem1.value !== "default") {
+    btnelem.disabled = false;
+  } else {
+    btnelem.disabled = true;
+  }
+}
 
 </script>
 
